* fix horizontal overflow on home page * fix tooltip staying open after click on user-progress avatar

--- a/src/app/modules/trees/components/list/list.component.less
+++ b/src/app/modules/trees/components/list/list.component.less
@@ -30,15 +30,12 @@
   &.failed {
     min-height: @listPlaceholderHeight;
 
+    overflow-x: hidden;
     pointer-events: none;
   }
 
-  &.loading {
-    overflow-x: hidden;
-
-    .list-item {
-      .loading-bg(@listItemBgColor);
-    }
+  &.loading .list-item {
+    .loading-bg(@listItemBgColor);
   }
 
   &.empty {
